--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,51 @@
+body {
+    background-color: black;
+    color: white;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 
+.container {
+    text-align: center;
+}
+
+.converter {
+    margin-bottom: 20px;
+}
+
+.converter input {
+    margin: 5px;
+    padding: 10px;
+    font-size: 1.2em;
+    width: 200px;
+    text-align: center;
+}
+
+.converter label {
+    display: block;
+    margin-top: 10px;
+    font-size: 1em;
+}
+
+button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.info {
+    margin-top: 20px;
+}
+
+.info h2 {
+    margin-bottom: 10px;
+}
+
+.info p {
+    margin: 5px 0;
+}
